--- a/Gamesstarter/Gamesstarter.csproj
+++ b/Gamesstarter/Gamesstarter.csproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Costura.Fody" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3">
+		 <PrivateAssets>all</PrivateAssets>
+		<CopyLocalLock>true</CopyLocalLock>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
