--- a/Gamesstarter/Gamesstarter.csproj
+++ b/Gamesstarter/Gamesstarter.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Interop.IWshRuntimeLibrary" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3">
 		 <PrivateAssets>all</PrivateAssets>
 		<CopyLocalLock>true</CopyLocalLock>
