--- a/Gamesstarter/Gamesstarter.csproj
+++ b/Gamesstarter/Gamesstarter.csproj
@@ -10,6 +10,10 @@
     <ApplicationIcon>Res\DefaultIcon.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);FRXX_KU25</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <Content Include="Res\DefaultIcon.ico" />
   </ItemGroup>
