[M]以管理员身份启动程序

--- a/Gamesstarter/Gamesstarter.csproj
+++ b/Gamesstarter/Gamesstarter.csproj
@@ -8,6 +8,7 @@
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <SignAssembly>False</SignAssembly>
     <ApplicationIcon>Res\DefaultIcon.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
