[M]添加背景框

--- a/Gamesstarter/Gamesstarter.csproj
+++ b/Gamesstarter/Gamesstarter.csproj
@@ -20,5 +20,7 @@
   <ItemGroup>
     <Resource Include="background.png" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Resource Include="loginui.png" />
+  </ItemGroup>
 </Project>
